--- a/gcc-8-python-3.7/test/Dockerfile
+++ b/gcc-8-python-3.7/test/Dockerfile
@@ -10,10 +10,10 @@ COPY --from=gcc /usr/share /usr/share
 RUN apt update
 RUN apt install -y libgl1-mesa-glx
 
-RUN pushd /tmp \
-    wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz \
-    tar -xf ta-lib-0.4.0-src.tar.gz \
-    cd ta-lib \
-    ./configure --prefix=$prefix \
-    make -j \
-    make install
+RUN pushd /tmp ;\
+    wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz ;\
+    tar -xf ta-lib-0.4.0-src.tar.gz ;\
+    cd ta-lib ;\
+    ./configure --prefix=$prefix ;\
+    make -j ;\
+    make install;
