--- a/gcc-8-python-3.7/test/Dockerfile
+++ b/gcc-8-python-3.7/test/Dockerfile
@@ -14,6 +14,6 @@ RUN pushd /tmp ;\
     wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz ;\
     tar -xf ta-lib-0.4.0-src.tar.gz ;\
     cd ta-lib ;\
-    ./configure --prefix=$prefix ;\
+    ./configure --prefix=/usr ;\
     make -j ;\
     make install;
