[Mod] use image from cicle-ci

--- a/gcc-7-python-3.7/latest/Dockerfile
+++ b/gcc-7-python-3.7/latest/Dockerfile
@@ -1,5 +1,5 @@
 FROM gcc:7 as gcc
-FROM python:3.7 as python
+FROM circleci/python:3.7 as python
 
 #COPY --from=python /usr/local /usr/local
 #COPY --from=python /usr/lib /usr/lib
